<?xml version="1.0"?>
<package format="2">
  <name>hw_bridge</name>
  <version>1.4.0</version>
  <description>The hw_bridge package</description>

  <maintainer email="gustavorezendesilva@hotmail.com">Gustavo R. Silva</maintainer>

  <author email="gustavorezendesilva@hotmail.com">Gustavo R. Silva</author>
  <author email="leandro.becker@ufsc.br">Leandro B. Becker</author>
  <author email="jomi.hubner@ufsc.br">Jomi F. Hubner</author>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>jason_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>jason_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>jason_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>


  <export>
  </export>
</package>
