<?xml version="1.0"?>
<package format="3">
  <name>jason_ros</name>
  <version>1.9.1</version>
  <description>The jason_hw_bridge package</description>

  <maintainer email="gustavorezendesilva@hotmail.com">Gustavo R. Silva</maintainer>

  <author email="gustavorezendesilva@hotmail.com">Gustavo R. Silva</author>
  <author email="leandro.becker@ufsc.br">Leandro B. Becker</author>
  <author email="jomi.hubner@ufsc.br">Jomi F. Hubner</author>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>

  <build_depend>jason_ros_msgs</build_depend>
  <build_export_depend>jason_ros_msgs</build_export_depend>
  <exec_depend>jason_ros_msgs</exec_depend>

  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-pathlib</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python-pathlib2</exec_depend>


  <export>
  </export>
</package>
